--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "send": "~0.3.0",
-    "commander": "~2.2.0"
+    "commander": "~2.2.0",
+    "open": "0.0.5"
   }
 }
